@@ -5,7 +5,7 @@
         description('<a href="https://bugs.webkit.org/show_bug.cgi?id=98474">Bug 98474</a>: Throttle DOM timers on hidden pages.');
 
         var jsTestIsAsync = true;
-	var previousT = new Date().getTime();
+        var previousTime = new Date().getTime();
         var timerCount = 0;
         var firstTimerWhileHidden = true;
         var isPageVisible = true;
@@ -13,59 +13,58 @@
         var tolerance = 20;
         var timerAlignmentInterval = 1000;
 
-	function testTimer() {
-	    var d = new Date();
-	    var t = d.getTime();
+        function testTimer()
+        {
+            var date = new Date();
+            var time = date.getTime();
             if (!isPageVisible) {
                 if (firstTimerWhileHidden) {
-      	            firstTimerIntervalWhilePageHidden = t - previousT;
+                    firstTimerIntervalWhilePageHidden = time - previousTime;
                     var minValue = timeoutInterval - tolerance;
-	            shouldBeGreaterThanOrEqual("firstTimerIntervalWhilePageHidden", minValue.toString());
-	            var maxValue = timeoutInterval + timerAlignmentInterval + tolerance;
+                    shouldBeGreaterThanOrEqual("firstTimerIntervalWhilePageHidden", minValue.toString());
+                    var maxValue = timeoutInterval + timerAlignmentInterval + tolerance;
                     shouldBeTrue("firstTimerIntervalWhilePageHidden <= " + maxValue);
                     firstTimerWhileHidden = false;
                 } else {
-      	            timerIntervalWhilePageHidden = t - previousT;
+                    timerIntervalWhilePageHidden = time - previousTime;
                     shouldBeCloseTo("timerIntervalWhilePageHidden", timerAlignmentInterval, tolerance);
                 }
-            }
-            else {
-                timerIntervalWhilePageVisible = t - previousT;
+            } else {
+                timerIntervalWhilePageVisible = time - previousTime;
                 shouldBeCloseTo("timerIntervalWhilePageVisible", timeoutInterval, tolerance);
             }
 
             timerCount++;
-	    previousT = t;
+            previousTime = time;
 
             if (timerCount == 1) {
                 testRunner.setPageVisibility("hidden");
-	        isPageVisible = false;
-	    } else if (timerCount == 3) {
+                isPageVisible = false;
+            } else if (timerCount == 3) {
                 testRunner.resetPageVisibility();
                 isPageVisible = true;
             } else if (timerCount >= 4){
                 finishJSTest();
-	        return;
+                return;
             }
             setTimeout(testTimer, timeoutInterval);
-	}
+        }
 
-        function runTest() {
-	    if (!window.testRunner) {
-	        debug('This test requires testRunner');
-	        return;
+        function runTest()
+        {
+            if (!window.testRunner) {
+                debug('This test requires testRunner');
+                return;
             }
-	    var timeoutIntervalSpans = document.getElementsByClassName('timeoutInterval');
-            for (var i = 0; i < timeoutIntervalSpans.length; i++) {
-	        timeoutIntervalSpans[i].innerText = timeoutInterval;
-	    }
+            var timeoutIntervalSpans = document.getElementsByClassName('timeoutInterval');
+            for (var i = 0; i < timeoutIntervalSpans.length; i++)
+                timeoutIntervalSpans[i].innerText = timeoutInterval;
 
-	    document.getElementById('alignmentInterval').innerText = timerAlignmentInterval / 1000;
+            document.getElementById('alignmentInterval').innerText = timerAlignmentInterval / 1000;
 
             testRunner.dumpAsText();
             setTimeout(testTimer, timeoutInterval);
         }
-
     </script>
 </head>
 <body onload="runTest()">
